--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -7,6 +7,7 @@
     "alerts": "Alerts",
     "orders": "Orders",
     "recipes": "Recipes",
-    "sales": "Sales"
+    "sales": "Sales",
+    "reviews": "Reviews"
   }
 }
