--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -7,6 +7,7 @@
     "alerts": "Alertas",
     "orders": "Pedidos",
     "recipes": "Recetas",
-    "sales": "Ventas"
+    "sales": "Ventas",
+    "reviews": "Calificaciones"
   }
 }
