feat(inventory): implement translation for inventory components and update UI elements

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -9,5 +9,49 @@
     "recipes": "Recipes",
     "sales": "Sales",
     "reviews": "Reviews"
+  },
+  "inventory": {
+    "suppliesTitle": "Supplies",
+    "create": "CREATE",
+    "createSupply": "Create supply",
+    "emptyTitle": "You have not added inputs yet.",
+    "emptySubtitle": "Add them to start managing your inventory.",
+    "addInventoryTitle": "Add supply to inventory",
+    "addInventorySubtitle": "Complete the details of the new supply to add it to your inventory.",
+    "supply": "Supply",
+    "stock": "Stock",
+    "expirationDate": "Expiration Date",
+    "cancel": "CANCEL",
+    "add": "ADD",
+    "editSupplyTitle": "Edit supply",
+    "editSupplySubtitle": "Update the details of the supply in your inventory.",
+    "name": "Name",
+    "category": "Category",
+    "unitMeasure": "Unit Measure",
+    "descriptionOptional": "Description (optional)",
+    "unitPrice": "Unit Price (S/.)",
+    "perishable": "Perishable",
+    "notPerishable": "It’s not perishable",
+    "isPerishable": "It’s perishable",
+    "update": "Update",
+    "createLabel": "Create",
+    "save": "Save",
+    "inventoryTitle": "Inventory",
+    "searchPlaceholder": "Search supplies",
+    "tableSupply": "Supply",
+    "tableCategory": "Category",
+    "tableUnit": "Unit",
+    "tableExpiration": "Expiration",
+    "tableStock": "Stock",
+    "tablePerishable": "Perishable",
+    "tableActions": "Actions",
+    "inventoryEmptyMessage": "There are no supplies registered. To manage your inventory, you must first create ingredients in the system.",
+    "registeredAlerts": "Registered alerts",
+    "filterBy": "Filter by:",
+    "ingredients": "Ingredients",
+    "location": "Location",
+    "status": "Status",
+    "lastUpdate": "Last update",
+    "confirmDeletePlaceholder": "confirm-delete-modal works!"
   }
 }
