--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -9,5 +9,49 @@
     "recipes": "Recetas",
     "sales": "Ventas",
     "reviews": "Calificaciones"
+  },
+  "inventory": {
+    "suppliesTitle": "Insumos",
+    "create": "CREAR",
+    "createSupplyTitle": "Crear insumo",
+    "emptyTitle": "Aún no has agregado insumos.",
+    "emptySubtitle": "Agrégalos para empezar a gestionar tu inventario.",
+    "addInventoryTitle": "Agregar insumo al inventario",
+    "addInventorySubtitle": "Completa los detalles del nuevo insumo para añadirlo a tu inventario.",
+    "supply": "Insumo",
+    "stock": "Existencia",
+    "expirationDate": "Fecha de vencimiento",
+    "cancel": "CANCELAR",
+    "add": "AÑADIR",
+    "editSupplyTitle": "Editar insumo",
+    "editSupplySubtitle": "Actualiza los detalles del insumo en tu inventario.",
+    "name": "Nombre",
+    "category": "Categoría",
+    "unitMeasure": "Unidad de medida",
+    "descriptionOptional": "Descripción (opcional)",
+    "unitPrice": "Precio unitario (S/.)",
+    "perishable": "Perecedero",
+    "notPerishable": "No es perecedero",
+    "isPerishable": "Es perecedero",
+    "update": "Actualizar",
+    "createLabel": "Crear",
+    "save": "Guardar",
+    "inventoryTitle": "Inventario",
+    "searchPlaceholder": "Buscar insumos",
+    "tableSupply": "Insumo",
+    "tableCategory": "Categoría",
+    "tableUnit": "Unidad",
+    "tableExpiration": "Vencimiento",
+    "tableStock": "Stock",
+    "tablePerishable": "Perecible",
+    "tableActions": "Acciones",
+    "inventoryEmptyMessage": "No hay insumos registrados. Para gestionar tu inventario, primero debes crear ingredientes en el sistema.",
+    "registeredAlerts": "Alertas registradas",
+    "filterBy": "Filtrar por:",
+    "ingredients": "Ingredientes",
+    "location": "Ubicación",
+    "status": "Estado",
+    "lastUpdate": "Última actualización",
+    "confirmDeletePlaceholder": "confirm-delete-modal works!"
   }
 }
