--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -13,7 +13,7 @@
   "inventory": {
     "suppliesTitle": "Supplies",
     "create": "CREATE",
-    "createSupply": "Create supply",
+    "createSupplyTitle": "Create supply",
     "emptyTitle": "You have not added inputs yet.",
     "emptySubtitle": "Add them to start managing your inventory.",
     "addInventoryTitle": "Add supply to inventory",
