--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -14,6 +14,8 @@
     "suppliesTitle": "Insumos",
     "create": "CREAR",
     "edit": "Editar",
+    "next": "Next",
+    "back": "Back",
     "createSupplyTitle": "Crear insumo",
     "emptyTitle": "Aún no has agregado insumos.",
     "emptySubtitle": "Agrégalos para empezar a gestionar tu inventario.",
