feat(inventory): implement custom supply creation component and service integration

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -49,7 +49,7 @@
     "edit": "Edit",
     "next": "Next",
     "back": "Back",
-    "createSupplyTitle": "Create supply",
+    "createSupply": "Create supply",
     "emptyTitle": "You have not added inputs yet.",
     "emptySubtitle": "Add them to start managing your inventory.",
     "addInventoryTitle": "Add supply to inventory",
@@ -59,7 +59,7 @@
     "expirationDate": "Expiration Date",
     "cancel": "CANCEL",
     "add": "ADD",
-    "editSupplyTitle": "Edit supply",
+    "editSupply": "Edit supply",
     "editSupplySubtitle": "Update the details of the supply in your inventory.",
     "name": "Name",
     "category": "Category",
