--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -49,7 +49,7 @@
     "edit": "Editar",
     "next": "Next",
     "back": "Back",
-    "createSupplyTitle": "Crear insumo",
+    "createSupply": "Crear insumo",
     "emptyTitle": "Aún no has agregado insumos.",
     "emptySubtitle": "Agrégalos para empezar a gestionar tu inventario.",
     "addInventoryTitle": "Agregar insumo al inventario",
