feat(inventory): add batch details component with responsive design and translation support

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -10,6 +10,12 @@
     "sales": "Sales",
     "reviews": "Reviews"
   },
+  "shared": {
+    "deleteTitle": "Confirm Deletion",
+    "deleteMessage": "Are you sure you want to delete this item?",
+    "deleteButton": "Delete",
+    "cancelButton": "Cancel"
+  },
   "profile": {
     "title": "Profile Details",
     "alt-user-photo": "User photo",
@@ -87,8 +93,7 @@
     "ingredients": "Ingredients",
     "location": "Location",
     "status": "Status",
-    "lastUpdate": "Last update",
-    "confirmDeletePlaceholder": "confirm-delete-modal works!"
+    "lastUpdate": "Last update"
   },
   "order-to-supplier": {
     "title": "Orders",
